GET /users/:id documentado
